Исправление багов